--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "riot-kit",
-  "version": "0.0.1",
-  "description": "Starter kit for Riot.js",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "npm run build:css && npm run build:js",
-    "build:js": "browserify -t [riotify --ext html] -d src/app.js -p [minifyify --compressPath . --map app.js.map --output dist/app.js.map] -o dist/app.js",
-    "build:css": "cp src/app.css dist/app.css",
-    "dev": "light-server -s . -p 9090 -w 'src/**/*.js, src/**/*.html # npm run build:js' -w 'src/app.css # npm run build:css # reloadcss'"
+    "dev": "webpack-dev-server",
+    "dist": "webpack -p -d",
+    "viewdist": "light-server -s . -p 7000"
   },
-  "author": "fireyy",
-  "license": "WTFPL",
   "devDependencies": {
-    "browserify": "^10.1.3",
-    "light-server": "^1.0.2",
-    "riotify": "0.0.9",
-    "minifyify": "^7.0.0"
-  },
-  "dependencies": {
-    "riot": "^2.1.0"
+    "babel": "^5.1.10",
+    "babel-core": "^5.1.10",
+    "babel-loader": "^5.0.0",
+    "css-loader": "^0.10.1",
+    "light-server": "^1.0.1",
+    "riot": "^2.1.0",
+    "riotjs-loader": "^1.1.3",
+    "style-loader": "^0.10.2",
+    "webpack": "^1.8.4",
+    "webpack-dev-server": "^1.8.0"
   }
 }
