--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server",
-    "dist": "webpack -p -d",
-    "viewdist": "light-server -s . -p 7000"
+    "dist": "webpack -p -d"
   },
   "devDependencies": {
     "babel": "^5.1.10",
     "babel-core": "^5.1.10",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.10.1",
-    "light-server": "^1.0.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-json-editor": "^2.2.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rev": "^5.0.0",
+    "gulp-rev-collector": "^1.0.0",
+    "gulp-rimraf": "^0.1.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-webpack": "^1.5.0",
+    "gulp-webserver": "^0.9.1",
+    "md5-file": "^2.0.3",
     "riot": "^2.1.0",
     "riotjs-loader": "^1.1.3",
+    "run-sequence": "^1.1.1",
     "style-loader": "^0.10.2",
-    "webpack": "^1.8.4",
-    "webpack-dev-server": "^1.8.0"
+    "webpack": "^1.9.12"
   }
 }
